--- a/style.css
+++ b/style.css
@@ -1,118 +1,116 @@
-*{
-    border-radius: 5px;
-    
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
-html {
-    font-family: sans-serif;
-  }
-  
-  body {
-    width: 500px;
-    max-width: 100%;
-    margin: 0 auto;
-    background-color: #212121;
-    background: url(/pexels-naim-benjelloun-3894218.jpg) no-repeat;
-    background-size: cover;
-    height: 100%;
-  }
-  
-  .lastResult {
+body {
+  background-color: #021942;
+}
+.image{
+width: 100px;
+}
+h2 {
+    /* position: absolute; */
+    margin: -1px 418px;
+    padding: 49px;
     color: white;
-    padding: 7px;
-  }
-  
-  .guesses {
-    color: white;
-    padding: 7px;
-  }
-  
-  button {
-    background-color: #141414;
-    color: #fff;
-    width: 250px;
-    height: 50px;
-    border-radius: 25px;
-    font-size: 30px;
-    border-style: none;
-    margin-top: 30px;
-    /* margin-left: 50px; */
-  }
-  
-  #subt {
-    width: 200px;
-    height: 50px;
-    border-radius: 10px;
-    font-size: 20px;
-    border-style: none;
-    margin-top: 50px;
-    cursor: pointer;
-  }
-  
-  #guessField {
-    color: #000;
-    width: 250px;
-    height: 50px;
-    font-size: 30px;
-    border-style: none;
-    margin-top: 25px;
-  
-    /* margin-left: 50px; */
-    border: 5px solid #6c6d6d;
-    text-align: center;
-  }
-  
-  #guess {
-    font-size: 35px;
-    /* margin-left: 90px; */
-    margin-top: 120px;
-    color: #fff;
-  }
-  
-  .guesses {
-    background-color: #7a7a7a;
-  }
-  
-  #wrapper {
-margin-top: 100px;
-    box-sizing: border-box;
-    text-align: center;
-    width: 664px;
-    height: 100%;
-    background-color: #474747;
-    color: #fff;
-    font-size: 25px;
-    padding: 10px;
-  }
-  
-  h1 {
-    background-color: #8700ffc7;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-  }
-  h2{
-    color: yellow;
-  }
-  p {
-    text-align: center;
-  }
-  .resultParas{
-    font-size: 25px;
-    padding: 5px;
-    margin: 5px;
-    background-color: #8700ffc7;;
+}
 
-  }
-  #newGame{
-    background-color: #ff8800c7;
-    color: black;
-    /* width: 200px; */
-    font-size: 1.5rem;
-    padding:10px 0;
-    cursor: pointer;
-  }
-  .lowOrHi {
-    color: black;
-    font-size: 16px;
+.wrapper {
+  box-sizing: content-box;
+  left: 50%;
+  top: 50%;
+  padding: 100px;
+  width: 600px;
+  margin: 0 auto;
+ 
 }
-  
+.game-container {
+  position: relative;
+  width: 100%;
+  display: grid;
+  gap: 0.6em;
+}
+.stats-container {
+  text-align: right;
+  margin-bottom: 1.2em;
+}
+.stats-container span {
+  font-weight: 600;
+}
+.card-container {
+  position: relative;
+  width: 6.25em;
+  height: 6.25em;
+  cursor: pointer;
+}
+.card-before,
+.card-after {
+  padding: 10px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #000000;
+  transition: transform 0.7s ease-out;
+  backface-visibility: hidden;
+}
+.card-before {
+  background-color: blue;
+  font-size: 2.8em;
+  font-weight: 600;
+}
+.card-after {
+  background-color: #ffffff;
+  transform: rotateY(180deg);
+}
+.card-container.flipped .card-before {
+  transform: rotateY(180deg);
+}
+.card-container.flipped .card-after {
+  transform: rotateY(0deg);
+}
+.controls-container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  top: 0;
+}
+button {
+  border: none;
+  border-radius: 0.3em;
+  padding: 1em 1.5em;
+  cursor: pointer;
+}
+#stop {
+  font-size: 1.1em;
+  display: block;
+  margin: 1.1em auto 0 auto;
+  background-color: #000000;
+  color: #ffffff;
+}
+.controls-container button {
+  font-size: 1.3em;
+  box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+}
+.hide {
+  display: none;
+}
+#result {
+  text-align: center;
+}
+#result h2 {
+  font-size: 2.5em;
+}
+#result h4 {
+  font-size: 1.8em;
+  margin: 0.6em 0 1em 0;
+}
